@@ -1,40 +1,60 @@
 package KL.KL_Booking_App.service.impl;
 
 import KL.KL_Booking_App.entity.Hotel;
+import KL.KL_Booking_App.entity.User;
 import KL.KL_Booking_App.exeption.ResourceNotFoundException;
 import KL.KL_Booking_App.payload.response.HotelDto;
 import KL.KL_Booking_App.repository.HotelRepository;
+import KL.KL_Booking_App.repository.UserRepository;
 import KL.KL_Booking_App.service.IHotelService;
+import KL.KL_Booking_App.service.sec.UserDetailsImpl;
 import KL.KL_Booking_App.utils.HotelUtils;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class HotelServiceImpl implements IHotelService {
 
     private final HotelRepository hotelRepository;
     private final HotelUtils hotelUtils;
+    private final UserRepository userRepository;
 
-    public HotelServiceImpl(HotelRepository hotelRepository, HotelUtils hotelUtils) {
+    public HotelServiceImpl(HotelRepository hotelRepository, HotelUtils hotelUtils, UserRepository userRepository) {
         this.hotelRepository = hotelRepository;
         this.hotelUtils = hotelUtils;
+        this.userRepository = userRepository;
     }
 
     @Override
     public Hotel findHotelById(Long hotelId) {
+
         return hotelRepository.findById(hotelId).orElseThrow(() -> new ResourceNotFoundException("Hotel", "Id", hotelId));
     }
 
     @Override
     public List<HotelDto> getAll() {
-        List<Hotel> hotels = hotelRepository.findAll();
-        return hotels.stream().map(hotelUtils::mapToDto).toList();
+        UserDetailsImpl userDetails = (UserDetailsImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        Long userId = userDetails.getId();
+        User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User", "Id", userId));
+
+        List<Hotel> reservations = hotelRepository.findByUserUserId(user.getUserId());
+        return reservations.stream().map(hotelUtils::mapToDto).collect(Collectors.toList());
     }
 
     @Override
     public HotelDto save(HotelDto hotelDto) {
+        // retrieve current user id to add hotel
+        // retrieve current id user -> get all reservations
+        // Fake user id 1
+        UserDetailsImpl userDetails = (UserDetailsImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        Long userId = userDetails.getId();
+        User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User", "Id", userId));
+
         Hotel hotel =  hotelUtils.mapToEntity(hotelDto);
+        hotel.setUser(user);
         Hotel savedhotel = hotelRepository.save(hotel);
         return hotelUtils.mapToDto(savedhotel);
     }
@@ -55,6 +75,15 @@ public class HotelServiceImpl implements IHotelService {
 
         Hotel updatedhotel = hotelRepository.save(hotel);
         return hotelUtils.mapToDto(updatedhotel);
+    }
+
+    @Override
+    public HotelDto fetchCurrentHotel() {
+        UserDetailsImpl userDetails = (UserDetailsImpl) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        Long userId = userDetails.getId();
+        User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User", "Id", userId));
+        Hotel hotel = user.getHotel();
+        return hotelUtils.mapToDto(hotel);
     }
 
 
